# korlix

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SETUP.md
crates/korlix-ast/: Cargo.toml
crates/korlix-ast/src/: api.rs  declarations.rs  element.rs  expression.rs  lib.rs  node.rs  program.rs  types.rs
crates/korlix-cli/: Cargo.toml
crates/korlix-cli/src/: main.rs  output.rs
crates/korlix-cli/src/commands/: build.rs  check.rs  dev.rs  mod.rs  new.rs  preview.rs
crates/korlix-codegen/: Cargo.toml
crates/korlix-codegen/src/: api.rs  assets.rs  css.rs  document.rs  html.rs  js.rs  lib.rs  routes.rs
crates/korlix-compiler/: Cargo.toml
crates/korlix-compiler/runtime-bundle/: korlix.runtime.js
crates/korlix-compiler/src/: compile.rs  context.rs  lib.rs  output.rs  pipeline.rs  project.rs
crates/korlix-components/: Cargo.toml
crates/korlix-components/src/: expander.rs  lib.rs  registry.rs  runtime.rs  schema.rs
crates/korlix-components/src/categories/: mod.rs
crates/korlix-core/: Cargo.toml
crates/korlix-core/src/: config.rs  diagnostics.rs  lib.rs  paths.rs  result.rs  source.rs  span.rs
crates/korlix-dev-server/: Cargo.toml
crates/korlix-dev-server/src/: error_overlay.rs  hot_drop.rs  lib.rs  server.rs  static_files.rs  watcher.rs  websocket.rs
crates/korlix-lexer/: Cargo.toml
crates/korlix-lexer/src/: indentation.rs  keywords.rs  lexer.rs  lib.rs  token.rs
crates/korlix-parser/: Cargo.toml
crates/korlix-parser/src/: blocks.rs  elements.rs  expressions.rs  lib.rs  parser.rs  recovery.rs  statements.rs
crates/korlix-resolver/: Cargo.toml
crates/korlix-resolver/src/: file_resolver.rs  import_resolver.rs  lib.rs  route_resolver.rs  symbol_table.rs
crates/korlix-runtime-plan/: Cargo.toml
crates/korlix-runtime-plan/src/: analyzer.rs  feature.rs  lib.rs  manifest.rs
crates/korlix-style/: Cargo.toml
crates/korlix-style/src/: colors.rs  generator.rs  layout.rs  lib.rs  registry.rs  scanner.rs  tokens.rs  validator.rs  variants.rs
docs/: 00-index.md  01-getting-started.md  02-project-structure.md  03-syntax.md  04-spa-mode.md  05-hot-drop.md  06-colors-and-utilities.md  07-components.md  08-toast-and-ui.md  09-state-events-functions.md  10-error-codes.md  11-compiler-architecture.md  KORLIX_MASTER_PLAN.md  KORLIX_USER_MANUAL.md  usermanual.md
examples/landing-page/: korlix.config.json
examples/landing-page/public/: index.html
examples/landing-page/src/: app.klx  main.klx
examples/landing-page/src/layouts/: main.klx
examples/landing-page/src/pages/: about.klx  index.klx  pricing.klx
examples/spa-dashboard/: korlix.config.json
examples/spa-dashboard/public/: index.html
examples/spa-dashboard/src/: app.klx
examples/spa-dashboard/src/layouts/: dashboard.klx
examples/spa-dashboard/src/pages/: dashboard.klx  settings.klx  users.klx
korlix-w/src/pages/: index.klx
my-test-app/: korlix.config.json  package.json
my-test-app/src/: app.klx
my-test-app/src/pages/: index.klx
npm/create-korlix/: README.md  create-korlix-0.1.0.tgz  package.json
npm/korlix/: README.md  korlix-0.1.0.tgz  package.json
npm/korlix/npm-test-site/: korlix.config.json  npm-test-site-0.1.0.tgz  package.json
npm/korlix/npm-test-site/src/: app.klx  main.klx
npm/korlix/npm-test-site/src/layouts/: main.klx
npm/korlix/npm-test-site/src/pages/: about.klx  index.klx
runtime/: package.json  tsconfig.json
runtime/src/api/: client.ts  index.ts
runtime/src/core/: dom.ts  events.ts  index.ts  mount.ts  state.ts
runtime/src/hmr/: apply.ts  client.ts
runtime/src/media/: image.ts  lazy.ts
runtime/src/overlay/: drawer.ts  dropdown.ts  modal.ts
runtime/src/router/: index.ts  link.ts  params.ts  router.ts
runtime/src/theme/: index.ts
runtime/src/toast/: index.ts  toast.ts
templates/basic/: korlix.config.json  package.json
templates/basic/api/: mock-api.js
templates/basic/src/: app.klx
templates/basic/src/layouts/: main.klx
templates/basic/src/pages/: about.klx  api-test.klx  implement.md  index.klx
templates/basic/src/theme/: tokens.klx
test-site/: korlix.config.json  package.json
test-site/npm/korlix/: package.json
test-site/public/: index.html
test-site/src/components/: hero.klx
test-site/src/layouts/: main.klx
test-site/src/pages/: index.klx
tests/api/: basic.rs
tests/components/: registry.rs
tests/integration/: basic_build.rs
tests/lexer/: basic.rs
tests/style/: registry.rs
