[workspace]
members = [
    "crates/korlix-cli",
    "crates/korlix-core",
    "crates/korlix-lexer",
    "crates/korlix-parser",
    "crates/korlix-ast",
    "crates/korlix-resolver",
    "crates/korlix-style",
    "crates/korlix-components",
    "crates/korlix-runtime-plan",
    "crates/korlix-codegen",
    "crates/korlix-dev-server",
    "crates/korlix-compiler",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
indicatif = "0.17"
walkdir = "2"
notify = "6"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-tungstenite = "0.21"
futures = "0.3"
thiserror = "1"
anyhow = "1"
regex = "1"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1"
dunce = "1"
pathdiff = { version = "0.2" }