[package]
name = "korlix-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
colored = { workspace = true }
indexmap = { workspace = true }
dunce = { workspace = true }
pathdiff = { workspace = true }
