[package]
name = "korlix-dev-server"
version = "0.1.0"
edition = "2021"

[dependencies]
korlix-core = { path = "../korlix-core" }
korlix-compiler = { path = "../korlix-compiler" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }
