[package]
name = "korlix-style"
version = "0.1.0"
edition = "2021"

[dependencies]
korlix-core = { path = "../korlix-core" }
korlix-ast = { path = "../korlix-ast" }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }

[[test]]
name = "registry_test"
path = "../../tests/style/registry.rs"
